--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm studying web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Fairfax, VA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like spending time with friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I want to be a project manager.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's the first step to a brighter future.</p>
     </section>
 
     <footer id="footer">
